--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,9 @@
     <string name="find_id">Find ID</string>
     <string name="find">Find</string>
     <string name="edit_details">Edit Details</string>
+    <string name="i_m_not_a_robot">I\'m not a robot</string>
+    <string name="sj_email">shujayke@gmail.com</string>
+    <string name="contact">Contact</string>
+    <string name="submit">Submit</string>
 
 </resources>
